INTYGFV-16624: Fixed tests